--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-global-configuration": "^1.2.0",
+    "react-router-dom": "^4.1.1",
+    "universal-cookie": "^2.0.8"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
